@@ -1,3 +1,8 @@
+2005-11-28  Matthias Clasen  <mclasen@redhat.com>
+
+	* gmodule.c (parse_libtool_archive): Silence
+	compiler warnings.
+
 2005-11-17  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.9.0 ===
